--- a/Tugas 1/index.html
+++ b/Tugas 1/index.html
@@ -28,10 +28,9 @@
                 <b>(${surahAR.data.ayahs[i].numberInSurah})</b>
                 ${surahAR.data.ayahs[i].text}
               </div>
-              <div class='indonesia'
-                <b>(${surahID.data.ayahs[i].numberInSurah})</b>
+              <div class='indonesia'>
                 ${surahID.data.ayahs[i].text}
-            </div>
+              </div>
             </div>
           `;}
         document.getElementById('output').innerHTML = output;
