--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Al-Quran</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <header id="main-header">
+		<div class="container_header">
+      <h1>Al-Quran</h1>
+		</div>
+  </header>
+  
+  <div class="container">
+    <aside id="sidebar">
+      <h3>Pilih Surat</h3>
+      <ol id="daftar_surat">
+      </ol>
+    </aside>
+    
+    <section id="main">
+      <h1 id="nama_surat">Memuat Surat</h1>
+      <div id='output'></div>
+      
+		</section>
+		
+  </div>
+
+  <footer>
+    <p>Web ini dibuat oleh : Muhammad Azhar Faturahman</p>
+    <p>16519261/13519020</p>
+  </footer>
+
+  <script src="script.js"></script>
+  
+</body>
+</html>
